update remove think if use ollama models
